--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1618,7 +1618,7 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #9a9a9a;
+		color: #808080;
 		/*font-family: "Amatic SC", Arial, Helvetica, sans-serif;*/
         font-family: 'Amatic SC',cursive;
 		font-size: 14pt;
@@ -2105,7 +2105,7 @@
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #9a9a9a;
+			color: #808080;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2714,7 +2714,7 @@
 		button:disabled,
 		.button.disabled,
 		.button:disabled {
-			background-color: #9a9a9a !important;
+			background-color: #808080 !important;
 			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
 			color: #fff !important;
 			cursor: default;
